ORC-181: ByteRleDecoder doesn't seek correctly

Fixes #114

Signed-off-by: Owen O'Malley <omalley@apache.org>